# UserHubAPI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  migrate.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03d5ec2295af_init.py  20250410_202858_initial_migration.py  916223b2c1f5_initial_migration.py  ddec0c103a82_описание_изменений.py  e351c2efa8b1_add_surname_column_to_users.py  f947ff304986_create_users_table.py
k8s/: app-deployment.yaml  configmap.yaml  postgres-deployment.yaml  rabbitmq-deployment.yaml  worker-deployment.yaml
src/app/: asgi.py  config.py  db.py  dependencies.py  logging_config.py  migrate.py
src/app/controllers/: user.py
src/app/models/: task_result.py  user.py
src/app/repositories/: base.py  task_repository.py  user_repository.py
src/app/routes/: handlers.py  system_routes.py  task_routes.py  user.py  users.py  users_routes.py
src/app/schemas/: user.py
src/app/services/: rabbitmq.py
src/app/templates/: index.html  tasks.html
src/app/worker/: worker.py  worker_handlers.py
tests/: conftest.py  test_config.py  test_errors.py  test_users.py
