[tool.poetry]
name = "UserHub"
version = "0.1.0"
description = "REST API for managing users"
authors = ["Tumanov Dmitry <D1m7asis@gmail.com>"]
license = "MIT"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
uvicorn = "^0.18.0"
python = "^3.12"
python-dotenv = "^1"
litestar = { extras = ["standard"], version = "^2" }
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
